# discord-sms-bot

./: .flake8  .pre-commit-config.yaml  LICENSE.txt  README.md  main.py  pyproject.toml  sample.env
alembic/: env.py
alembic/versions/: 2520f2eb8a5a_second_commit.py  5b0b3fcd6540_initial_commit.py
app/core/: config.py  db.py  loggin_config.py
app/crud/: notification.py  numbers.py
app/models/: __init__.py  base.py  general.py
app/schemas/: register.py
app/utils/: utils_general.py  utils_models.py
app/utils/messaging/: __init__.py  messagebird_messages.py  twilio_messages.py
app/utils/queries/: numbers.py
